# jack-keys

./: CMakeLists.txt
cmake/: FindJACK.cmake
src/: CMakeLists.txt  jackoutput.cpp  jackoutput.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  piano.cpp
